# VR-steam-controllers-driver

./: .gitignore  README.md  git_push.sh
Android_ArCode/: .gitignore  INSTALL_JDK.txt  README.md  build_project.bat  gradle.properties  gradle.properties.jdk17  settings.gradle.kts
Android_ArCode/app/: build.gradle.kts
Android_ArCode/app/src/main/: AndroidManifest.xml
Android_ArCode/app/src/main/java/com/example/aruco_code/: ArUcoTransform.kt  (+2 more)
Android_ArCode/app/src/main/res/layout/: activity_main.xml
Android_ArCode/app/src/main/res/values/: strings.xml  themes.xml
Android_ArCode/app/src/main/res/values-night/: themes.xml
Android_ArCode/gradle/: libs.versions.toml
Android_ArCode/gradle/wrapper/: gradle-wrapper.properties
Android_ArCode/python-test/: android_debug_receiver.py  debug_reciever.py  generate_aruco.py  test_android_connection.py  test_server.py
hub_tracker_autocalibrated/: README.md  aruco_tracker.py  auto_calibration.py  calibration.py  data_structures.py  gamepad_config.json  generate_aruco_markers.py  network.py  utilities.py  vr_config.json  vr_tracking_hub.py  webcam_aruco_source.py  webcam_source.py
hub_tracker_autocalibrated/old/: vr_tracking_hub.py  vr_tracking_hub_v2.py  vr_tracking_hub_v2_new.py
hub_tracker_autocalibrated/src/: gamepad_controller.py
hub_tracker_autocalibrated/utilites/: calibration.json
kicad/: .gitignore  fp-info-cache  scheme.dsn  scheme.kicad_pcb  scheme.kicad_prl  scheme.kicad_pro  scheme.kicad_sch  scheme.rules  scheme.ses
kicad/gerber/: scheme-B_Cu.gbr  scheme-B_Mask.gbr  scheme-B_Paste.gbr  scheme-B_Silkscreen.gbr  scheme-Edge_Cuts.gbr  scheme-F_Cu.gbr  scheme-F_Mask.gbr  scheme-F_Paste.gbr  scheme-F_Silkscreen.gbr  scheme-NPTH.drl  scheme-PTH.drl  scheme-job.gbrjob
steaVR-controller-driver-C/: .gitignore  CMakeLists_old.txt  README.md  controller_simulator.py  simple_simulator.py  steamvr.vrsettings
steaVR-controller-driver-C/drivers/right_controller/: controller.vrdrivermanifest
steaVR-controller-driver-C/input/: cvcontroller_bindings.json  cvcontroller_profile.json
steaVR-controller-driver-C/resources/: driver.vrdrivermanifest
steaVR-controller-driver-C/src/: driver.h
steamVR-controller-driver-C/: BUTTON_MAPPING_GUIDE.md  CMakeLists.txt  README.md  STEP_BY_STEP_TESTING.md  TESTING_GUIDE.md  aruco_tracker.py  calibration.json  check_installation.bat  manual_install.bat  simple_simmulator_HMD.py  simple_simulator.py  start.sh  test_udp_receiver.py  test_udp_sender.py
steamVR-controller-driver-C/drivers/left_controller/: controller.vrdrivermanifest
steamVR-controller-driver-C/resources/: driver.vrdrivermanifest
steamVR-controller-driver-C/resources/input/: cvcontroller_profile.json
steamVR-controller-driver-C/src/: controller_device.cpp  driver.h  hmd_device_position.cpp  main.cpp  network_client.cpp
steamVR-controller-fromGyroMouse/: .gitignore  CMakeLists.txt  GYROMOUSE_SETUP.md  QUICKSTART.md  README.md  USAGE_GUIDE.md  check_files.bat  check_installation.bat  enhanced_gyromouse_tracker.py  generate_aruco_markers.py  gyromouse_aruco_tracker.py  install_gyromouse.bat  simple_gyromouse_simulator.py  simple_mouse_tracker.py
steamVR-controller-fromGyroMouse/Windows Kernel-Mode-Driver/: .gitignore
steamVR-controller-fromGyroMouse/Windows Kernel-Mode-Driver/GyroMouseFilter/: INSTALLATION.md  README.md
steamVR-controller-fromGyroMouse/Windows Kernel-Mode-Driver/GyroMouseFilter/userapp/: control.cpp
steamVR-controller-fromGyroMouse/Windows Kernel-Mode-Driver/VS-GyroMouse/: COMPILE_INSTRUCTIONS.md  GyroMouse.inf  README.md  VHID_SETUP.md  VISUAL_STUDIO_GUIDE.md
steamVR-controller-fromGyroMouse/Windows Kernel-Mode-Driver/VS-GyroMouse/control-mouse/: CMakeLists.txt  QUICK_START.md  SETUP_INSTRUCTIONS.md  mouse_hook_blocking.cpp  test_driver.cpp  test_mouse.cpp
steamVR-controller-fromGyroMouse/Windows Kernel-Mode-Driver/VSGyroFilterDriver/: CLI_BUILD_INSTRUCTIONS.md  FILTER_DOCUMENTATION.md  PROJECT_STRUCTURE.txt  QUICK_START.txt  README.md  REINSTALL_INSTRUCTIONS.txt  REPORT.md  VERSION.txt  driver.c  driver.h
steamVR-controller-fromGyroMouse/Windows Kernel-Mode-Driver/VSGyroFilterDriver/GyroFilterDriver/: GyroFilterDriver.sln
steamVR-controller-fromGyroMouse/Windows Kernel-Mode-Driver/VSGyroFilterDriver/GyroFilterDriver/GyroFilterDriver/: GyroFilterDriver.inf  GyroFilterDriver.vcxproj  GyroFilterDriver.vcxproj.filters
steamVR-controller-fromGyroMouse/Windows Kernel-Mode-Driver/VSGyroFilterDriver/GyroMouseFilterControl/: CmakeLists.txt  GyroMouseFilterControl.c  README_COMPILE.md
steamVR-controller-fromGyroMouse/Windows Kernel-Mode-Driver/VSVirtualDeviceDriver/: CLI_BUILD_INSTRUCTIONS.md  GyroMouse.inf  README.md  VSVirtualDeviceDriver.sln  VSVirtualDeviceDriver.vcxproj  vhid_mouse.c  vhid_mouse.h
steamVR-controller-fromGyroMouse/Windows Kernel-Mode-Driver/VSVirtualDeviceDriver/VirtualDeviceDriver/: VirtualDeviceDriver.sln
steamVR-controller-fromGyroMouse/Windows Kernel-Mode-Driver/VSVirtualDeviceDriver/VirtualDeviceDriver/VirtualDeviceDriver/: VirtualDeviceDriver.inf  VirtualDeviceDriver.vcxproj  VirtualDeviceDriver.vcxproj.filters
steamVR-controller-fromGyroMouse/Windows Kernel-Mode-Driver/mouse_hook/: mouse_hook.cpp  readme.md
steamVR-controller-fromGyroMouse/Windows Kernel-Mode-Driver/mouse_hook_block/: CmakeLists.txt  mouse_hook.cpp  readme.md
steamVR-controller-fromGyroMouse/Windows Kernel-Mode-Driver/mouse_hook_interception/: .gitignore  CmakeLists.txt  DIAGNOSTICS.md  INTERCEPTION_GUIDE.md  mouse_hook.cpp  readme.md  run.bat  test_udp.py
steamVR-controller-fromGyroMouse/input/: gyromouse_profile.json
steamVR-controller-fromGyroMouse/resources/: driver.vrdrivermanifest
steamVR-controller-fromGyroMouse/resources/input/: gyromouse_bindings.json  gyromouse_profile.json
steamVR-controller-fromGyroMouse/resources/settings/: default.vrsettings
steamVR-controller-fromGyroMouse/src/: controller_device.cpp  device_provider.cpp  device_provider.h  driver.h  gyro_controller.cpp  gyro_controller.h  hid_device.cpp  hid_device.h  main.cpp  mouse_input_client.cpp
(+2 files in other folders)
